force-app/main/default/objects/Skywave_Contact_Update__e/Skywave_Contact_Update__e.object-meta.xml
<CustomObject>
    <description>Published by Skywave_ContactUpsert (Sites guest endpoint). A trigger on this event runs in System Mode and upserts the anonymous Contact (keyed on Session_Id__c = deviceId) with whatever subset of {Skywave_Conversation_Id__c, Skywave_Survey_Json__c, Skywave_Survey_Summary__c} the payload supplies. Decouples anonymous public traffic from direct Contact DML — the Sites Guest user has Create on this PE only, no Contact perms.</description>
    <label>Skywave Contact Update</label>
    <pluralLabel>Skywave Contact Updates</pluralLabel>
</CustomObject>