force-app/main/default/objects/Skywave_Contact_Update__e/fields/Avatar_Url__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Url__c</fullName>
    <label>Avatar URL</label>
    <description>Shepherd path of the avatar ContentDocument uploaded for this profile. Stamped onto Contact.ContactCardPicture__c by the trigger when Update_Type__c='avatar'.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>