force-app/main/default/objects/Skywave_Contact_Update__e/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <label>Conversation Id</label>
    <description>MessagingSession.ConversationId, when type='chat_start'. Stamped onto Contact.Skywave_Conversation_Id__c.</description>
    <type>Text</type>
    <length>64</length>
</CustomField>