force-app/main/default/objects/Skywave_Contact_Update__e/fields/Demo_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Demo_Session_Id__c</fullName>
    <label>Demo Session Id</label>
    <description>Demo_Session__c.Id at the time the event was published. Used to look up the per-Demo_Session Account on Contact creation.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>