force-app/main/default/objects/Skywave_Contact_Update__e/fields/Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Id__c</fullName>
    <label>Device Id</label>
    <description>Skywave anonymous deviceId. Stamped onto Contact.Session_Id__c (the upsert key).</description>
    <type>Text</type>
    <length>64</length>
    <required>true</required>
</CustomField>