force-app/main/default/objects/Skywave_Contact_Update__e/fields/Geo_Country__c.field-meta.xml
<CustomField>
    <fullName>Geo_Country__c</fullName>
    <label>Geo_Country</label>
    <description>IP geolocation carried from the consumer site (survey_complete). Stamped onto Contact.Geo_Country__c.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>