force-app/main/default/objects/Skywave_Contact_Update__e/fields/Geo_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Geo_Latitude__c</fullName>
    <label>Geo_Latitude</label>
    <description>IP geolocation coordinate carried from the consumer site (survey_complete). Stamped onto Contact.Geo_Latitude__c.</description>
    <type>Number</type>
    <precision>9</precision>
    <scale>6</scale>
</CustomField>