force-app/main/default/objects/Skywave_Contact_Update__e/fields/Geo_Region__c.field-meta.xml
<CustomField>
    <fullName>Geo_Region__c</fullName>
    <label>Geo_Region</label>
    <description>IP geolocation carried from the consumer site (survey_complete). Stamped onto Contact.Geo_Region__c.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>