force-app/main/default/objects/Skywave_Contact_Update__e/fields/Survey_Json__c.field-meta.xml
<CustomField>
    <fullName>Survey_Json__c</fullName>
    <label>Survey JSON</label>
    <description>Structured survey responses, when type='survey_complete'. Stamped onto Contact.Skywave_Survey_Json__c.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>