force-app/main/default/objects/Skywave_Contact_Update__e/fields/Survey_Summary__c.field-meta.xml
<CustomField>
    <fullName>Survey_Summary__c</fullName>
    <label>Survey Summary</label>
    <description>Natural-language survey summary, when type='survey_complete'. Stamped onto Contact.Skywave_Survey_Summary__c.</description>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>