force-app/main/default/objects/Skywave_Contact_Update__e/fields/Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Update_Type__c</fullName>
    <label>Update Type</label>
    <description>Discriminator: 'survey_complete' or 'chat_start'. Drives which fields the trigger writes and which Demo_Event__e it fans out for the monitor LWC.</description>
    <type>Text</type>
    <length>32</length>
    <required>true</required>
</CustomField>